[package]
name = "emo-audio"
version = "0.1.0"
authors = ["Daniel McKenna <daniel@emotech.co>"]
description = "Audio processing routines and utilities"
categories = ["audio", "sound"]
readme = "README.md"
license = "MIT/Apache2.0"
edition = "2018"

[dependencies]
ndarray = "0.13"
num-traits = "0.2.8"
rustfft = "3.0.0"

[dev-dependencies]
float-cmp = "0.5.2"
criterion = "0.3"
rand = "0.7"
ndarray-npy = "0.5.0"

[profile.bench]
opt-level = 3
debug = false
overflow-checks = false

[[bench]]
name = "stft_benchmark"
harness = false
