[package]
name = "emo-audio"
version = "0.1.0"
authors = ["Daniel McKenna <daniel@emotech.co>"]
description = "Audio processing routines and utilities"
categories = ["audio", "sound"]
readme = "README.md"
license = "MIT/Apache2.0"
edition = "2018"

[dependencies]
ndarray = "0.15.4"
num-traits = "0.2.15"
rustfft = "6.1.0"

[dev-dependencies]
float-cmp = "0.6.0"
criterion = "0.3"
lazy_static = "1.2"
rand = "0.7"
ndarray-npy = "0.8.1"

[profile.bench]
opt-level = 3
debug = false
overflow-checks = false

[[bench]]
name = "stft_benchmark"
harness = false
